<resources>
    <string name="app_name">Macro Fit</string>

    <string name="add_new_food_label">Add a new Food</string>
    <string name="edit_food_label">Edit Food</string>
    <string name="add_new_nutrition_fact_label">Add a new Nutrition Fact</string>
    <string name="edit_nutrition_fact_label">Edit Nutrition Fact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for a food</string>

    <string name="calendar_scroll_behavior">com.yveschiong.macrofit.behaviors.ScrollingCalendarBehavior</string>

    <string name="food">Food</string>
    <string name="no_food">No food yet. Please add some food!</string>

    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="no_nutrition_facts">No nutrition facts yet. Please add some nutrition facts!</string>

    <string name="food_amount_text">%1$.1f%2$s</string>
    <string name="nutrition_fact_amount_text">per %1$.1f%2$s</string>
    <string name="calories_text">Calories: %1$.1f</string>
    <string name="protein_text">Protein: %1$.1f</string>
    <string name="carbs_text">Carbohydrates: %1$.1f</string>
    <string name="fat_text">Fat: %1$.1f</string>

    <string name="add_nutrition_fact_food_name">Food Name</string>
    <string name="add_nutrition_fact_weight">Weight</string>
    <string name="add_nutrition_fact_units">g</string>
    <string name="add_nutrition_fact_calories">Calories</string>
    <string name="add_nutrition_fact_protein">Protein (g)</string>
    <string name="add_nutrition_fact_carb">Carbohydrate (g)</string>
    <string name="add_nutrition_fact_fat">Fat (g)</string>
    <string name="add_nutrition_fact_button_text">Add Nutrition Fact</string>

    <string name="edit_nutrition_fact_button_text">Edit Nutrition Fact</string>
    <string name="delete_nutrition_fact_button_text">Delete Nutrition Fact</string>

    <string name="delete_dialog_title">Deletion Confirmation</string>
    <string name="delete_dialog_message">Are you sure you want to delete?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <string name="field_required_error_text">This field is required.</string>
    <string name="field_invalid_error_text">This input is invalid.</string>
    <string name="field_value_already_exists_error_text">This input already exists.</string>

    <string name="add_food_choose_nutrition_fact">Choose a nutrition fact:</string>
    <string name="add_food_button_text">Add Food</string>

    <string name="edit_food_button_text">Edit Food</string>
    <string name="delete_food_button_text">Delete Food</string>

    <string name="calories_label">Calories</string>
    <string name="protein_label">Protein</string>
    <string name="carbs_label">Carbs</string>
    <string name="fat_label">Fat</string>
    <string name="macro_split_label">Macro Split</string>
    <string name="macro_format">%1$dg</string>
    <string name="macro_split_format">%1$d/%2$d/%3$d</string>

    <string name="usda_search">USDA Search</string>
    <string name="no_usda_search_results">No search results.</string>

</resources>
