<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/add_nutrition_fact_page_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_food_name" />

            </android.support.design.widget.TextInputLayout>

            <!-- Need an adjusted baseline custom view so we can align our spinner to the edit text child -->
            <com.yveschiong.macrofit.views.TextInputLayoutBaselineAdjusted
                android:id="@+id/weightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/unitsSpinner"
                app:layout_constraintTop_toBottomOf="@+id/nameLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_weight"
                    android:inputType="numberDecimal" />

            </com.yveschiong.macrofit.views.TextInputLayoutBaselineAdjusted>

            <Spinner
                android:id="@+id/unitsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:layout_constraintBaseline_toBaselineOf="@id/weightLayout"
                app:layout_constraintLeft_toRightOf="@id/weightLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.2" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/caloriesLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_calories"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/proteinLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caloriesLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_protein"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/carbLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proteinLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/carb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_carb"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fatLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_fat"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_nutrition_fact_page_padding"
        android:text="@string/edit_nutrition_fact_button_text"
        android:theme="@style/EditButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_nutrition_fact_page_padding"
        android:text="@string/delete_nutrition_fact_button_text"
        android:theme="@style/DeleteButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>