<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/add_food_page_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/nutritionFactChooseText"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_food_choose_nutrition_fact" />

            <!-- Wrapping a spinner with a frame layout so we can apply a background color -->
            <FrameLayout
                android:id="@+id/spinnerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_food_page_padding"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/nutritionFactChooseText">

                <Spinner
                    android:id="@+id/nutritionFactSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/add_food_page_padding" />

            </FrameLayout>

            <com.yveschiong.macrofit.views.TextInputLayoutBaselineAdjusted
                android:id="@+id/weightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/add_nutrition_fact_page_padding"
                android:paddingRight="@dimen/add_nutrition_fact_page_padding"
                android:paddingTop="@dimen/add_nutrition_fact_page_padding"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/unitText"
                app:layout_constraintTop_toBottomOf="@+id/spinnerWrapper">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_nutrition_fact_weight"
                    android:inputType="numberDecimal" />

            </com.yveschiong.macrofit.views.TextInputLayoutBaselineAdjusted>

            <TextView
                android:id="@+id/unitText"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/weightLayout"
                app:layout_constraintLeft_toRightOf="@id/weightLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.2"
                tools:text="g" />

            <include
                layout="@layout/list_item_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/weightLayout" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_nutrition_fact_page_padding"
        android:text="@string/edit_food_button_text"
        android:theme="@style/EditButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_nutrition_fact_page_padding"
        android:text="@string/delete_food_button_text"
        android:theme="@style/DeleteButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>